--- a/index.html
+++ b/index.html
@@ -13,20 +13,8 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet">
 
-    <script>
-        (function (w, g) {
-            w['GoogleAnalyticsObject'] = g;
-            w[g] = w[g] || function () {
-                    (w[g].q = w[g].q || []).push(arguments)
-                };
-            w[g].l = 1 * new Date();
-        })(window, 'ga');
-
-        // Optional TODO: replace with your Google Analytics profile ID.
-        ga('create', 'UA-XXXX-Y');
-        ga('send', 'pageview');
-    </script>
-    <script src="http://www.google-analytics.com/analytics.js"></script>
+    <script async src="js/scr.js"></script>
+    <script async src="http://www.google-analytics.com/analytics.js"></script>
     <script async src="js/perfmatters.js"></script>
 </head>
 
@@ -35,7 +23,7 @@
     <a href="/"><img src="img/profilepic.jpg"></a>
     <p>Cameron Pittman<br><span>Course Developer</span></p>
     <a href="/"><img src="img/profilepic1.jpg"></a>
-    <p>Ilya Belousov<br><span>+375 25 999 15 58 <br> i9991559@gmail.com</span></p>
+    <p>Ilya Belousov<br><span>+375 25 999 15 59 <br> i9991559@gmail.com</span></p>
 </header>
 
 <div class="container">
