--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
 
+
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/print.css" rel="stylesheet">
 </head>
 
 <body>
