--- a/index.html
+++ b/index.html
@@ -84,9 +84,7 @@
     <p>Ilya Belousov<br><span>Phone: +375 25 999 15 59 <br>E-mail: i9991559@gmail.com</span></p>
 </header>
 
-<script async src="js/scr.js"></script>
-<script async src="js/google_analystics.js"></script>
-<script async src="js/perfmatters.js"></script>
+
 
 <div class="container">
     <div class="hero">
@@ -127,5 +125,9 @@
         <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
     </footer>
 </div>
+<script async src="js/google_analystics.js"></script>
+<!--<script async src="js/scr.js"></script>-->
+
+<!--<script async src="js/perfmatters.js"></script>-->
 </body>
 </html>
