--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pittman: Portfolio</title>
 
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-
 <style>
 
     html {
@@ -62,14 +60,44 @@
     }
 
     @media print {
-    * { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; }
-    a, a:visited { color: #444 !important; text-decoration: underline; }
-    a[href]:after { content: " (" attr(href) ")"; }
-    tr, img { page-break-inside: avoid; }
-    img { max-width: 100% !important; }
-    @page { margin: 0.5cm; }
-    p, h2, h3 { orphans: 3; widows: 3; }
-    h2, h3{ page-break-after: avoid; }
+        * {
+            background: transparent !important;
+            color: black !important;
+            text-shadow: none !important;
+            filter: none !important;
+            -ms-filter: none !important;
+        }
+
+        a, a:visited {
+            color: #444 !important;
+            text-decoration: underline;
+        }
+
+        a[href]:after {
+            content: " (" attr(href) ")";
+        }
+
+        tr, img {
+            page-break-inside: avoid;
+        }
+
+        img {
+            max-width: 100% !important;
+        }
+
+        @page {
+            margin: 0.5cm;
+        }
+
+        p, h2, h3 {
+            orphans: 3;
+            widows: 3;
+        }
+
+        h2, h3 {
+            page-break-after: avoid;
+        }
+    }
 
         /* cyrillic-ext */
         @font-face {
@@ -184,6 +212,7 @@
             unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
         }
 
+
 </style>
 </head>
 
@@ -237,8 +266,5 @@
     </footer>
 </div>
 <script async src="js/google_analystics.js"></script>
-<!--<script async src="js/scr.js"></script>-->
-
-<!--<script async src="js/perfmatters.js"></script>-->
 </body>
 </html>
